Letter spacing fix

--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -36,7 +36,6 @@ header {
   nav.primary {
     display: none;
     font: $normal 1.8em/3rem $regular;
-    letter-spacing: 1px;
     ul {
       line-height:1em;
       text-align: center;
